2015-06-11  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_commonsize.m: Accept empty dimensions

	* arrays/generic/stk_commonsize.m: Accept empty dimensions, under
	the condition that all input arguments have the same empty
	dimensions (in which case the result is empty).

2015-06-10  Julien Bect  <julien.bect@centralesupelec.fr>

	@stk_dataframe/subsasgn.m: Preserve column names when deleting rows

	* arrays/@stk_dataframe/subsasgn.m: Preserve column names when
	deleting rows, even if the resulting array is empty.

2015-06-02  Julien Bect  <julien.bect@centralesupelec.fr>

	wfg.c: Improve portability again

	* misc/pareto/private/wfg.c: Improve portability again. Now all
	variables are declared at the beginning of functions (as required
	by the C89 standard). And some unused headers have been removed,
	too.

2015-05-29  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_distrib_bivnorm_cdf.m: Bugfix

	* misc/distrib/stk_distrib_bivnorm_cdf.m: Fix a bug in the case of
	mixtures of singular and non-singular cases. Add unit test.

2015-05-28  Julien Bect  <julien.bect@centralesupelec.fr>

	wfg.c: Remove C99-specific code (stdbool.h).

	* misc/pareto/private/wfg.c: Remove C99-specific code (stdbool.h).

2015-05-27  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_pmisclass.m: Compute the probability of misclassification

	* utils/stk_pmisclass.m: New function to compute the probability
	of misclassification with respect to a given threshold (either the
	current probability of misclassification or the expectation of the
	future probability of misclassification).
	* examples/02_design_of_experiments/stk_example_doe04.m: Example
	script that demonstrates the use of stk_pmisclass ().

	stk_dominatedhv.m: New function to compute dominated hypervolumes.

	* misc/pareto/stk_dominatedhv.m: New function to compute
	dominated hypervolumes, which uses WFG 1.10 internally
	* misc/pareto/private/stk_dominatedhv_mex.c: MEX-file wrapper for WFG